# Lead_Intent_Prediction_Model

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements-dev.txt  requirements.txt
api/: __init__.py  dependencies.py  main.py  schemas.py
api/routers/: health.py  predict.py
config/: base.yaml  development.yaml  production.yaml  staging.yaml
dags/: __init__.py  data_ingestion_dag.py  feature_engineering_dag.py  model_deployment_dag.py  model_training_dag.py
docker/: airflow.Dockerfile  api.Dockerfile  mlflow.Dockerfile
frontend/: app.js  index.html  style.css
mlflow/: mlflow.db
scripts/: build_feature_table.py  build_scored_table.py  explore_crm.py  promote_model.py  seed_snowflake.py  test_snowflake.py  train_from_snowflake.py  train_local.py
src/: __init__.py
src/data/: __init__.py  data_loader.py  snowflake_connector.py  validators.py
src/features/: __init__.py  crm_feature_pipeline.py  encoders.py  pipeline.py  scored_feature_pipeline.py  selectors.py
src/training/: __init__.py  evaluator.py  hp_tuning.py  model_selector.py  trainer.py
src/utils/: __init__.py  config.py  logger.py  mlflow_utils.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_features.py  test_models.py  test_schemas.py
