[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-intent-model"
version = "0.1.0"
description = "End-to-end ML pipeline for lead intent prediction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Team", email = "team@example.com"}
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.1",
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.1",
    "xgboost>=2.0.3",
    "lightgbm>=4.1.0",
    "mlflow>=2.10.2",
    "optuna>=3.1.0",
    "apache-airflow>=2.8.1",
    "apache-airflow-providers-snowflake>=4.2.2",
    "snowflake-connector-python>=3.5.0",
    "snowflake-sqlalchemy>=1.5.1",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "structlog>=24.1.0",
    "PyYAML>=6.0.1",
    "dynaconf>=3.2.4",
    "tenacity>=8.2.3",
    "great-expectations>=0.18.0",
    "pandera>=0.18.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.26.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.9",
    "ipython>=8.20.0",
    "notebook>=7.1.0",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "ipdb>=0.13.13",
    "click>=8.1.7",
]

[project.scripts]
train = "src.training.trainer:main"
serve = "api.main:main"

[tool.setuptools]
packages = ["src", "api", "dags"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "venv", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mlflow.*,airflow.*,snowflake.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src", "api"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*Protocol\\):",
    "@(abc\\.)?abstractmethod",
]
